# cradle

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  SECURITY.md
.claude/skills/review-pr/: SKILL.md
.github/workflows/: ci.yml  sdk-ci.yml  sdk-release.yml
bins/beatbox/: Cargo.toml
bins/beatbox/src/: main.rs
bins/beatboxd/: Cargo.toml
bins/beatboxd/src/: main.rs
crates/beatbox-client/: Cargo.toml
crates/beatbox-client/src/: lib.rs
crates/beatbox-core/: Cargo.toml
crates/beatbox-core/src/: lib.rs
crates/beatbox-engine/: Cargo.toml
crates/beatbox-engine/src/: lib.rs
crates/beatbox-server/: Cargo.toml
crates/beatbox-server/fixtures/: mcp-tools.catalog.json
crates/beatbox-server/src/: jobs.rs  lib.rs
crates/beatbox-server/tests/: mcp_catalog_drift.rs  openapi_drift.rs  server_mcp.rs
docs/: client-surface.json
examples/: fib.wasm  fib.wat  hello.py  req-fib.json  spin.wasm  spin.wat
scripts/: check-sdk-versions.sh  e2e-daemon.sh
sdks/: BRIEF.md  README.md  RELEASING.md  openapi.json
sdks/csharp/: .gitignore  Beatbox.sln  README.md
sdks/csharp/examples/AddOne/: AddOne.csproj  Program.cs
sdks/csharp/src/Beatbox/: BeatboxClient.cs  BeatboxJson.cs  Enums.cs  Exceptions.cs  Models.cs  Policy.cs  Source.cs  TolerantEnumConverter.cs  beatbox.csproj
sdks/csharp/tests/Beatbox.Tests/: BaseUrlPolicyTests.cs  Beatbox.Tests.csproj  EnumToleranceTests.cs  JobUriTests.cs  JsonRoundTripTests.cs
sdks/go/: .gitignore  README.md  client.go  client_test.go  doc.go  errors.go  example_test.go  go.mod  models.go  source.go
sdks/go/examples/addone/: main.go
sdks/java/: README.md  pom.xml
sdks/java/src/main/java/ai/beatbox/: BeatboxApiException.java  BeatboxClient.java  BeatboxException.java  BeatboxTransportException.java
sdks/java/src/main/java/ai/beatbox/examples/: AddOneExample.java
sdks/java/src/main/java/ai/beatbox/internal/: Json.java
sdks/java/src/main/java/ai/beatbox/model/: CreateJobResponse.java  Determinism.java  EffectiveIsolation.java  EgressRecord.java  ErrorBody.java  ErrorResponse.java  ExecuteRequest.java  ExecutionResult.java  ExecutionStatus.java  FsPolicy.java  JobRecord.java  JobStatus.java  Lane.java  Limits.java  Metrics.java  Mount.java  MountMode.java  NetPolicy.java  Operation.java  OperationMetadata.java  Policy.java  Secret.java  SecretExpose.java  Source.java
sdks/java/src/test/java/ai/beatbox/: BaseUrlPolicyTest.java  ErrorBodyTest.java  JobUriTest.java  JsonRoundTripTest.java
sdks/php/: README.md  autoload.php  composer.json
sdks/php/examples/: add_one.php
sdks/php/src/: ApiError.php  Client.php  CreateJobResponse.php  EffectiveIsolation.php  EgressRecord.php  ErrorBody.php  ExecuteRequest.php  ExecutionResult.php  ExecutionStatus.php  JobRecord.php  JobStatus.php  Lane.php  Limits.php  Metrics.php  Operation.php  OperationMetadata.php  Policy.php  Source.php  TransportError.php
sdks/php/src/Internal/: Coerce.php
sdks/php/test/: run.php
sdks/python/: README.md  pyproject.toml
sdks/python/beatbox/: __init__.py  client.py  errors.py  models.py
sdks/python/examples/: add_one.py
sdks/python/tests/: test_client.py  test_job_id_encoding.py  test_models.py
sdks/ruby/: .gitignore  README.md  beatbox.gemspec
sdks/ruby/examples/: add_one.rb
sdks/ruby/lib/: beatbox.rb
sdks/ruby/lib/beatbox/: client.rb  errors.rb  models.rb  util.rb  version.rb
sdks/ruby/test/: beatbox_test.rb
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/examples/: fib.ts
sdks/typescript/src/: client.ts  errors.ts  index.ts  models.ts
sdks/typescript/test/: client.test.ts
src/: main.rs
