[package]
name = "beatbox-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed HTTP client for beatbox."

[dependencies]
beatbox-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
axum.workspace = true
tokio.workspace = true

[lints]
workspace = true
