[package]
name = "beatbox-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared wire types for beatbox sandbox execution."

[dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
