[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beatbox"
version = "0.1.0"
description = "Zero-dependency Python SDK for the beatbox sandbox REST API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "beatbox" }]
keywords = ["beatbox", "sandbox", "wasm", "sdk"]
dependencies = []

[project.urls]
Homepage = "https://github.com/jadenfix/beatbox"
Repository = "https://github.com/jadenfix/beatbox"

[tool.setuptools.packages.find]
where = ["."]
include = ["beatbox*"]
